--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,5 +81,15 @@
             android:text="Open MVVM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        <Button
+            style="@style/MyButton"
+            app:layout_constraintTop_toBottomOf="@+id/btnMVP"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/btnActivity"
+            android:text="Open Activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
