--- a/app/src/main/res/layout/item_list_data2.xml
+++ b/app/src/main/res/layout/item_list_data2.xml
@@ -5,10 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:text="Test text 1"
     android:id="@+id/tvText"
-    android:background="@color/cyan"
+    android:background="@color/black"
     android:textSize="16sp"
-    android:textColor="@color/black"
+    android:textColor="@color/white"
     android:gravity="center"
     android:minHeight="?android:actionBarSize"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="100dp"/>
