--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,11 +84,11 @@
 
         <Button
             style="@style/MyButton"
-            app:layout_constraintTop_toBottomOf="@+id/btnMVP"
+            app:layout_constraintTop_toBottomOf="@+id/btnMVVM"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/btnActivity"
-            android:text="Open Activity"
+            android:id="@+id/btnPermissions"
+            android:text="Open Permissions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
